Stop map jumping around

--- a/sw/themes/firefly/css/style.css
+++ b/sw/themes/firefly/css/style.css
@@ -2489,7 +2489,10 @@ body.neatline.show div#neatline-narrative,body.neatline.fullscreen div#neatline-
     height: 700px;
 }
 
-
+/* geolocation */
+#map_browse {
+	height: 1000px;
+}
 
 
 /* mobile views */
